# tradingbase

./: .env.example  README.md  package.json  pyproject.toml  tsconfig.base.json
base-trading-bot-repo/: README.md  instructions.md  next-env.d.ts  package.json  tailwind.config.ts
base-trading-bot-repo/app/: globals.css  layout.tsx  page.tsx  providers.tsx
base-trading-bot-repo/app/api/trading/prepare/: route.ts
base-trading-bot-repo/app/api/trading/status/: route.ts
base-trading-bot-repo/app/api/trading/submit/: route.ts
base-trading-bot-repo/components/: ConnectWallet.tsx  ExecuteTradeButton.tsx  TokenBalance.tsx
base-trading-bot-repo/config/: tokens.ts  wagmi.ts
base-trading-bot-repo/hooks/: useWalletCapabilities.ts
base-trading-bot-repo/lib/base/: builderCode.ts
base-trading-bot-repo/lib/supabase/: admin.ts
base-trading-bot-repo/lib/trading/: riskEngine.ts  types.ts
base-trading-bot-repo/supabase/migrations/: 001_init.sql  002_builder_code.sql
