[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbase"
version = "0.1.0"
description = "Free-source-only crypto quant research and backtesting system"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.4.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "redis>=5.0.0",
  "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradingbase*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
